# tic-tac-toe

./: .gitignore  README.md  pyproject.toml
tic-taс-toe/: game.py
tik-taс-toe/: game.py
